--- a/css/main.css
+++ b/css/main.css
@@ -251,3 +251,13 @@
 #tags {
     text-align: center;
 }
+
+.purchase-item-thumbnail {
+    height: 200px;
+    width: 200px;
+}
+
+.purchase-item-details {
+    margin-left: 12;
+    padding-left: 20px;
+}
