--- a/css/main.css
+++ b/css/main.css
@@ -394,3 +394,9 @@ body {
     margin-right: 0px;
 }
 /* fine login */
+
+.link {
+    color: #333333;
+    text-decoration: none;
+    background-color: none;
+}
