--- a/css/main.css
+++ b/css/main.css
@@ -402,7 +402,15 @@ body {
     padding-bottom: 15px;
 }
 
-#img100x100 {
-    width: 100%;
-    height: 100%;
+.fixed-img {
+ width: 100%;
+ height: 100%;
+}
+
+.bordered-image {
+ padding: 5px;
+ border: 1px solid #999;
+ background-color:#FFF;
+ -moz-box-shadow:0px 0px 10px #000;
+ -webkit-box-shadow:0px 0px 10px #000;
 }
