--- a/css/main.css
+++ b/css/main.css
@@ -411,6 +411,7 @@ body {
  padding: 5px;
  border: 1px solid #999;
  background-color:#FFF;
- -moz-box-shadow:0px 0px 10px #000;
- -webkit-box-shadow:0px 0px 10px #000;
+ box-shadow: 0 0 10px #000;
+ -moz-box-shadow: 0 0 10px #000;
+ -webkit-box-shadow:0 0 10px #000;
 }
