--- a/css/main.css
+++ b/css/main.css
@@ -197,8 +197,7 @@ body {
 #descrizione {
     text-align: justify;
     font-size: 15px;
-    font-family: 'PT Sans Narrow',
-sans-serif;
+    font-family: 'PT Sans Narrow', sans-serif;
     letter-spacing: 1px;
 }
 
@@ -280,7 +279,7 @@ sans-serif;
     height: 200px;
     width: 200px;
     padding: 0px 0px 0px 0px;
-    margin-right: 0px;
+    margin-right: 15px;
     margin-left: 0px;
 }
 
@@ -342,7 +341,7 @@ body {
 
 .review-upload-thumnb {
     margin-top: 15px;
-    margin-right: 15px;
+    margin-right: 12px;
 }
 /* FAQ */
 
@@ -403,15 +402,21 @@ body {
 }
 
 .fixed-img {
-     width: 100%;
-     height: 100%;
+    width: 100%;
+    height: 100%;
 }
 
 .bordered-image {
     padding: 5px;
     border: 1px solid #999;
-    background-color:#FFF;
+    background-color: #FFF;
     box-shadow: 0 0 10px #000;
     -moz-box-shadow: 0 0 10px #000;
-    -webkit-box-shadow:0 0 10px #000;
+    -webkit-box-shadow: 0 0 10px #000;
 }
+
+.user-profile-image {
+    height: 200px;
+    width: 200px;
+    margin-top: 0px;
+    margin-bottom: 15px;
