--- a/flexslider/flexslider.css
+++ b/flexslider/flexslider.css
@@ -99,12 +99,12 @@ html[xmlns] .flexslider .slides {
     -moz-box-shadow: '' 0 1px 4px rgba(0, 0, 0, 0.2);
     -o-box-shadow: '' 0 1px 4px rgba(0, 0, 0, 0.2);
     box-shadow: '' 0 1px 4px rgba(0, 0, 0, 0.2);
-    /* parte che modifica il bordo dello slider */
+    /* parte che modifica il bordo dello slider 
     
     border-left: 0px;
     border-right: 0px;
     -webkit-border-radius: 0px;
-    -moz-border-radius: 0px;
+    -moz-border-radius: 0px; */
 }
 
 .flexslider .slides {
