--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,10 @@ body {
     font-family: 'Roboto Slab', serif;
 }
 
+#navbar {
+    font-size: 13px;
+}
+
 .marketing .col-sm-4 {
     text-align: center;
 }
@@ -440,7 +444,7 @@ body {
     padding: 5px;
     border: 1px solid #d3d3d3;
 }
-/* Testimonials */
+/* TESTIMONIALS CAROUSEL */
 
 #quote-carousel {
     padding: 0 10px 30px 10px;
@@ -508,3 +512,4 @@ body {
 .carousel-inner p {
     display: block;
 }
+/* END OF TESTIMONIALS CAROUSEL */
