--- a/css/main.css
+++ b/css/main.css
@@ -300,6 +300,7 @@ body {
 #container {
     overflow: hidden;
 }
+
 /* CSS for fixed-fluid layout */
 
 .fixed {
@@ -513,3 +514,38 @@ body {
     display: block;
 }
 /* END OF TESTIMONIALS CAROUSEL */
+
+/* FORM PAGAMENTO CARTA DI CREDITO - INIZIO */
+.panel-title {
+    display: inline;
+    font-weight: bold;
+}
+
+.checkbox.pull-right {
+    margin: 0;
+}
+
+.pl-ziro {
+    padding-left: 0px;
+}
+
+.form-control.error {
+    border-color: red;
+    outline: 0;
+    box-shadow: inset 0 1px 1px rgba(0,0,0,0.075), 0 0 8px rgba(255,0,0,0.6);
+}
+
+label.error {
+  font-weight: bold;
+  color: red;
+  padding: 2px 8px;
+  margin-top: 2px;
+}
+
+.payment-errors {
+  font-weight: bold;
+  color: red;
+  padding: 2px 8px;
+  margin-top: 2px;
+}
+/* FORM PAGAMENTO CARTA DI CREDITO - FINE */
