--- a/css/main.css
+++ b/css/main.css
@@ -300,7 +300,6 @@ body {
 #container {
     overflow: hidden;
 }
-
 /* CSS for fixed-fluid layout */
 
 .fixed {
@@ -489,7 +488,7 @@ body {
     width: 128px;
     height: 128px;
     border-radius: 100px;
-    border-color: #f33;
+    border-color: #5bc0de;
     opacity: 1;
     overflow: hidden;
 }
@@ -514,8 +513,8 @@ body {
     display: block;
 }
 /* END OF TESTIMONIALS CAROUSEL */
-
 /* FORM PAGAMENTO CARTA DI CREDITO - INIZIO */
+
 .panel-title {
     display: inline;
     font-weight: bold;
@@ -532,20 +531,20 @@ body {
 .form-control.error {
     border-color: red;
     outline: 0;
-    box-shadow: inset 0 1px 1px rgba(0,0,0,0.075), 0 0 8px rgba(255,0,0,0.6);
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(255, 0, 0, 0.6);
 }
 
 label.error {
-  font-weight: bold;
-  color: red;
-  padding: 2px 8px;
-  margin-top: 2px;
+    font-weight: bold;
+    color: red;
+    padding: 2px 8px;
+    margin-top: 2px;
 }
 
 .payment-errors {
-  font-weight: bold;
-  color: red;
-  padding: 2px 8px;
-  margin-top: 2px;
+    font-weight: bold;
+    color: red;
+    padding: 2px 8px;
+    margin-top: 2px;
 }
 /* FORM PAGAMENTO CARTA DI CREDITO - FINE */
